# comment-classfier

./: .gitignore  NOTEBOOK_IMPROVEMENTS.md  README.md  pyproject.toml  trabalho.md
.github/: copilot-instructions.md
document/: bib.yml  main.typ
notebooks/: 01_data_exploration.ipynb  comment-classifier.ipynb
src/: main.py
